Replace `environment` with `deploy_environment` across Ansible configurations for improved clarity and consistency. Adjust Traefik labels and templates for file-based routing and test-specific dashboard settings.

--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -3,7 +3,7 @@
 # Variables environnement PRODUCTION
 # ========================================
 
-environment: production
+deploy_environment: production
 
 # Features conditionnelles
 enable_gpu: true
