--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -17,7 +17,7 @@
     - name: Afficher environnement détecté
       ansible.builtin.debug:
         msg:
-          - "Environnement : {{ environment }}"
+          - "Environnement : {{ deploy_environment }}"
           - "GPU activé : {{ enable_gpu }}"
           - "Let's Encrypt : {{ enable_letsencrypt }}"
 
@@ -45,7 +45,7 @@
           - "✅ Déploiement terminé avec succès !"
           - "================================================"
           - "Services déployés : {{ enabled_services | join(', ') }}"
-          - "Environnement : {{ environment }}"
+          - "Environnement : {{ deploy_environment }}"
           - ""
           - "Accès Traefik : http://{{ service_domains.traefik }}"
           - ""
