--- a/ansible/group_vars/test.yml
+++ b/ansible/group_vars/test.yml
@@ -24,7 +24,7 @@ service_domains:
   pgadmin: "db.{{ base_domain }}"
 
 # Configuration NFS (Storage VM)
-nfs_server: "172.18.227.152" # IP_STORAGE_TEST
+nfs_server: "172.18.238.159" # IP_STORAGE_TEST
 nfs_mounts:
   - src: "{{ nfs_server }}:/exports/media"
     path: "/mnt/media"
@@ -66,7 +66,12 @@ docker_log_max_file: "3"
 
 # Monitoring
 prometheus_retention: "15d"  # Moins long en test
-grafana_install_plugins: false  # Plus rapide en test
+prometheus_scrape_interval: "15s"
+prometheus_evaluation_interval: "15s"
+grafana_admin_user: "admin"
+grafana_admin_password: "admin"  # À changer en production !
+grafana_plugins: ""  # Plugins Grafana à installer (séparés par ,)
+grafana_middlewares: ""  # Middlewares Traefik optionnels
 
 # Backup
 backup_enabled: false  # Pas de backups automatiques en test
