Add cAdvisor service and Grafana Docker dashboard for enhanced container monitoring with Prometheus integration.

--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -89,6 +89,7 @@ docker_log_max_file: "5"
 # Monitoring
 prometheus_retention: "90d"
 grafana_install_plugins: true
+prometheus_cadvisor_enabled: true
 
 # Backup
 backup_enabled: true
