--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -53,6 +53,15 @@
     group: root
   notify: restart monitoring
 
+- name: Déployer dashboard Docker pour Grafana
+  ansible.builtin.copy:
+    src: docker-dashboard.json
+    dest: "{{ docker_compose_path }}/monitoring/grafana/provisioning/dashboards/docker.json"
+    mode: '0644'
+    owner: root
+    group: root
+  notify: restart monitoring
+
 - name: Générer fichier .env Monitoring
   ansible.builtin.template:
     src: env.j2
