--- a/ansible/group_vars/test.yml
+++ b/ansible/group_vars/test.yml
@@ -24,7 +24,7 @@ service_domains:
   pgadmin: "db.{{ base_domain }}"
 
 # Configuration NFS (Storage VM)
-nfs_server: "172.18.230.240" # IP_STORAGE_TEST
+nfs_server: "172.18.232.164" # IP_STORAGE_TEST
 nfs_mounts:
   - src: "{{ nfs_server }}:/exports/media"
     path: "/mnt/media"
@@ -68,6 +68,7 @@ docker_log_max_file: "3"
 prometheus_retention: "15d"  # Moins long en test
 prometheus_scrape_interval: "15s"
 prometheus_evaluation_interval: "15s"
+prometheus_cadvisor_enabled: true  # Monitoring Docker
 grafana_admin_user: "admin"
 grafana_admin_password: "admin"  # À changer en production !
 grafana_plugins: ""  # Plugins Grafana à installer (séparés par ,)
