Refactor Ansible configurations for improved monitoring, compatibility, and maintainability:
- Add `requirements.yml` for required collections.
- Replace `apt_repository` and assertion logic to use `ansible_facts` for consistency.
- Update monitoring tasks to check container runtime status with `docker compose ps`.
- Change NFS server IP in test group variables.
- Remove unused `pull: "always"` from Docker Compose tasks.

--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -10,8 +10,8 @@
     - name: Vérification des prérequis
       ansible.builtin.assert:
         that:
-          - ansible_distribution == "Ubuntu"
-          - ansible_distribution_major_version | int >= 22
+          - ansible_facts['distribution'] == "Ubuntu"
+          - ansible_facts['distribution_major_version'] | int >= 22
         fail_msg: "Ce playbook nécessite Ubuntu 22.04 ou supérieur"
 
     - name: Afficher environnement détecté
