Integrate shared service stacks (Postgres, Redis, Nextcloud, Immich) with Ansible:
- Add database and cache roles with configuration templates and Docker Compose files.
- Define initialization scripts for Postgres users, databases, and extensions.
- Update `site.yml` to include and manage shared services.
- Expand health check and service access verification tasks.
- Configure Traefik routes for PgAdmin, Redis Commander, Nextcloud, and Immich.
- Modify `group_vars` to adjust NFS server IP.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ ansible/secrets/vault.yml
 **/letsencrypt/
 docker/traefik/logs/
 
+# Exceptions for configuration folders
+!docker/stateful/postgres/
+!docker/stateful/redis/
+
 # Ansible
 *.retry
 ansible/.vault_pass
