--- a/docker/stateful/postgres/docker-compose.yml
+++ b/docker/stateful/postgres/docker-compose.yml
@@ -21,11 +21,28 @@ services:
     container_name: pgadmin
     restart: always
     env_file: .env
+    environment:
+      - GUNICORN_THREADS=1
+      - GUNICORN_WORKERS=1
+      - PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION=False
+      - PGADMIN_DISABLE_POSTFIX=True
     volumes:
       - ${DATA_PATH}/pgadmin:/var/lib/pgadmin
     networks:
       - default
       - proxy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          memory: 256M
+    healthcheck:
+      test: ["CMD", "wget", "-O", "-", "http://localhost:80/misc/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     labels:
       - "traefik.enable=true"
       # HTTP Router
