Revise example vault configuration:
- Remove `.vault_pass.example` file.
- Simplify `vault.yml.example` with dynamic secret generation placeholders and environment variable lookups.
- Add notes on using external secret managers and secret rotation policies.
- Refactor example secrets for better security practices and reusability.

--- a/ansible/secrets/vault.yml.example
+++ b/ansible/secrets/vault.yml.example
@@ -1,92 +1,77 @@
 ---
-# Ce fichier doit être chiffré avec: ansible-vault encrypt vault.yml
-# Pour éditer: ansible-vault edit vault.yml
+# ========================================
+# EXEMPLE DE VAULT - NE JAMAIS COMMITER EN CLAIR
+# ========================================
+#
+# UTILISATION:
+# 1. Copier ce fichier: cp vault.yml.example vault.yml
+# 2. Générer des secrets forts avec:
+#    ansible-vault create vault.yml
+# 3. Utiliser des gestionnaires externes en production:
+#    - HashiCorp Vault
+#    - AWS Secrets Manager
+#    - Azure Key Vault
+#
+# ========================================
 
 # ========================================
 # Traefik
 # ========================================
-# Générer avec: htpasswd -nb admin VotreMotDePasse
-# Par défaut: admin / admin
-traefik_auth: "admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/"
-
-# Let's Encrypt
-traefik_acme_email: "admin@votre-domaine.fr"
+# Générer avec: echo $(htpasswd -nbB admin "$(openssl rand -base64 32)") | sed -e s/\\$/\\$\\$/g
+traefik_auth: "REMPLACER_PAR_HTPASSWD_HASH"
+traefik_acme_email: "security@votre-domaine.fr"
 
 # ========================================
 # PostgreSQL mutualisé
 # ========================================
-postgres_root_password: "ChangeMe_RootPostgres123!"
-postgres_replication_password: "ChangeMe_Replication123!"
+# Générer avec: openssl rand -base64 32
+postgres_root_password: "{{ lookup('env', 'POSTGRES_ROOT_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
+postgres_replication_password: "{{ lookup('env', 'POSTGRES_REPL_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
 
 # Databases & Users
 postgres_databases:
   nextcloud:
     user: "nextcloud"
-    password: "ChangeMe_NextcloudDB123!"
+    password: "{{ lookup('env', 'NEXTCLOUD_DB_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
   immich:
     user: "immich"
-    password: "ChangeMe_ImmichDB123!"
+    password: "{{ lookup('env', 'IMMICH_DB_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
   grafana:
     user: "grafana"
-    password: "ChangeMe_GrafanaDB123!"
+    password: "{{ lookup('env', 'GRAFANA_DB_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
 
 # ========================================
 # Redis mutualisé
 # ========================================
-redis_password: "ChangeMe_Redis123!"
+redis_password: "{{ lookup('env', 'REDIS_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
 
 # ========================================
-# Immich
-# ========================================
-immich_db_password: "{{ postgres_databases.immich.password }}"
-immich_db_username: "{{ postgres_databases.immich.user }}"
-immich_db_database: "immich"
-
-# ========================================
-# Nextcloud
+# Applications
 # ========================================
 nextcloud_admin_user: "admin"
-nextcloud_admin_password: "ChangeMe_NextcloudAdmin123!"
-nextcloud_db_password: "{{ postgres_databases.nextcloud.password }}"
-nextcloud_db_user: "{{ postgres_databases.nextcloud.user }}"
+nextcloud_admin_password: "{{ lookup('env', 'NEXTCLOUD_ADMIN_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
+nextcloud_db_password: "{{ lookup('env', NEXTCLOUD_DB_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
+nextcloud_db_user: "{{ lookup('env', 'NEXTCLOUD_DB_USER') | default('nextcloud', true) }}"
 nextcloud_db_database: "nextcloud"
 
-# ========================================
-# Jellyfin
-# ========================================
-# Pas de secrets requis (configuration via web UI)
-
-# ========================================
-# Grafana
-# ========================================
 grafana_admin_user: "admin"
-grafana_admin_password: "ChangeMe_GrafanaAdmin123!"
-grafana_db_password: "{{ postgres_databases.grafana.password }}"
-grafana_secret_key: "ChangeMe_GrafanaSecretKey123!"
+grafana_admin_password: "{{ lookup('env', 'GRAFANA_ADMIN_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
+grafana_secret_key: "{{ lookup('env', 'GRAFANA_SECRET_KEY') | default(lookup('password', '/dev/null length=32 chars=ascii_letters,digits'), true) }}"
 
 # ========================================
 # AMP (CubeCoders)
 # ========================================
-amp_license_key: ""  # Optionnel
-amp_admin_password: "ChangeMe_AMP123!"
+amp_license_key: "{{ lookup('env', 'AMP_LICENSE_KEY') }}"
+amp_admin_password: "{{ lookup('env', 'AMP_ADMIN_PASSWORD') | default('GENERER_AVEC_OPENSSL', true) }}"
 
 # ========================================
 # Notifications (optionnel)
 # ========================================
-# Discord
-discord_webhook_url: ""
-
-# Telegram
-telegram_bot_token: ""
-telegram_chat_id: ""
+discord_webhook_url: "{{ lookup('env', 'DISCORD_WEBHOOK_URL') }}"
 
 # ========================================
-# Backup (optionnel)
+# ROTATION DES SECRETS (IMPORTANT)
 # ========================================
-# Chiffrement backups
-backup_encryption_password: "ChangeMe_BackupEncryption123!"
-
-# Backblaze B2 (stockage cloud optionnel)
-b2_account_id: ""
-b2_account_key: ""
-b2_bucket_name: "epicea-backups"
+# Mettre en place une politique de rotation tous les 90 jours
+# Utiliser Ansible Tower/AWX pour automatiser
+# Documenter la procédure dans docs/secrets-rotation.md
