--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -17,8 +17,8 @@
     dest: "{{ docker_compose_path }}/immich/.env"
     mode: '0600'
 
-- name: Copier le fichier docker-compose
-  ansible.builtin.copy:
+- name: Générer le fichier docker-compose
+  ansible.builtin.template:
     src: ../../../docker/app/immich/docker-compose.yml
     dest: "{{ docker_compose_path }}/immich/docker-compose.yml"
     mode: '0644'
