--- a/ansible/roles/nextcloud/tasks/main.yml
+++ b/ansible/roles/nextcloud/tasks/main.yml
@@ -16,8 +16,8 @@
     dest: "{{ docker_compose_path }}/nextcloud/.env"
     mode: '0600'
 
-- name: Copier le fichier docker-compose
-  ansible.builtin.copy:
+- name: Générer le fichier docker-compose
+  ansible.builtin.template:
     src: ../../../docker/app/nextcloud/docker-compose.yml
     dest: "{{ docker_compose_path }}/nextcloud/docker-compose.yml"
     mode: '0644'
