--- a/docker/monitoring/docker-compose.yml
+++ b/docker/monitoring/docker-compose.yml
@@ -95,16 +95,19 @@ services:
 
       # HTTP Router
       - "traefik.http.routers.grafana-http.entrypoints=web"
-      - "traefik.http.routers.grafana-http.rule=Host(`monitoring.epicea-test.local`)"
+      - "traefik.http.routers.grafana-http.rule=Host(`${GRAFANA_DOMAIN}`)"
       - "traefik.http.routers.grafana-http.service=grafana"
       - "traefik.http.routers.grafana-http.middlewares=compression@file"
 
-      # HTTPS Router (pour production)
+      # HTTPS Router (activé uniquement si Let's Encrypt est activé)
+      {% if enable_letsencrypt %}
       - "traefik.http.routers.grafana-https.entrypoints=websecure"
-      - "traefik.http.routers.grafana-https.rule=Host(`monitoring.epicea-test.local`)"
+      - "traefik.http.routers.grafana-https.rule=Host(`${GRAFANA_DOMAIN}`)"
       - "traefik.http.routers.grafana-https.service=grafana"
-      - "traefik.http.routers.grafana-https.tls=false"
+      - "traefik.http.routers.grafana-https.tls=true"
+      - "traefik.http.routers.grafana-https.tls.certresolver=letsencrypt"
       - "traefik.http.routers.grafana-https.middlewares=compression@file"
+      {% endif %}
 
       # Service definition
       - "traefik.http.services.grafana.loadbalancer.server.port=3000"
