--- a/docker/stateful/redis/docker-compose.yml
+++ b/docker/stateful/redis/docker-compose.yml
@@ -31,12 +31,14 @@ services:
       - "traefik.http.routers.redis-commander-http.rule=Host(`redis.${BASE_DOMAIN}`)"
       - "traefik.http.routers.redis-commander-http.entrypoints=web"
       - "traefik.http.routers.redis-commander-http.service=redis-commander"
-      # HTTPS Router
+      # HTTPS Router (activé uniquement si Let's Encrypt est activé)
+      {% if enable_letsencrypt %}
       - "traefik.http.routers.redis-commander-https.rule=Host(`redis.${BASE_DOMAIN}`)"
       - "traefik.http.routers.redis-commander-https.entrypoints=websecure"
       - "traefik.http.routers.redis-commander-https.service=redis-commander"
       - "traefik.http.routers.redis-commander-https.tls=true"
-      - "traefik.http.routers.redis-commander-https.tls.certresolver=myresolver"
+      - "traefik.http.routers.redis-commander-https.tls.certresolver=letsencrypt"
+      {% endif %}
       # Service
       - "traefik.http.services.redis-commander.loadbalancer.server.port=8081"
 
