Update NFS configuration:
- Change NFS server IP in `group_vars/test.yml`.
- Add ownership and permissions configuration for mounted directories in storage tasks.

--- a/ansible/roles/storage/tasks/main.yml
+++ b/ansible/roles/storage/tasks/main.yml
@@ -20,6 +20,16 @@
     state: mounted
   loop: "{{ nfs_mounts }}"
 
+- name: Configurer les permissions après montage
+  ansible.builtin.file:
+    path: "{{ item.path }}"
+    state: directory
+    owner: "{{ item.owner | default(omit) }}"
+    group: "{{ item.group | default(omit) }}"
+    mode: "{{ item.mode | default(omit) }}"
+  loop: "{{ nfs_mounts }}"
+  when: item.owner is defined or item.group is defined or item.mode is defined
+
 - name: Vérifier les montages
   ansible.builtin.command: df -h {{ item.path }}
   loop: "{{ nfs_mounts }}"
