Secure Redis configuration:
- Add password authentication for Redis in Docker Compose and Ansible templates.
- Update health checks and Redis Commander configuration to use the password.
- Adjust Redis directory structure and set ownership/permissions.
- Modify NFS server IP in `group_vars/test.yml`.

--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -48,7 +48,7 @@
 # ==============================================================================
 # Redis Stack
 # ==============================================================================
-- name: Créer les répertoires pour Redis
+- name: Créer les répertoires pour Redis (propriétaire user)
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -58,6 +58,14 @@
   loop:
     - "{{ data_path }}/redis"
     - "{{ docker_compose_path }}/redis"
+
+- name: Créer le répertoire de données pour Redis (propriétaire redis)
+  ansible.builtin.file:
+    path: "{{ data_path }}/redis/data"
+    state: directory
+    mode: '0755'
+    owner: "999"
+    group: "1000"
 
 - name: Générer le fichier .env pour Redis
   ansible.builtin.template:
