--- a/docker/stateful/redis/docker-compose.yml
+++ b/docker/stateful/redis/docker-compose.yml
@@ -2,14 +2,15 @@ services:
   redis:
     image: redis:7-alpine
     container_name: redis
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     restart: always
     volumes:
-      - ${DATA_PATH}/redis:/data
+      - ${DATA_PATH}/redis/data:/data
     networks:
       - default
       - proxy
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -19,7 +20,7 @@ services:
     container_name: redis-commander
     restart: always
     environment:
-      REDIS_HOSTS: "local:redis:6379"
+      REDIS_HOSTS: "local:redis:6379:0:${REDIS_PASSWORD}"
     networks:
       - default
       - proxy
